# ccmetrics

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude-octopus/: state.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CLI-DESIGN.md  PRD.md  PRICING.md  TERMINAL-DESIGN.md  VISION.md
evaluations/: README.md
evaluations/launch/: 2026-03-22-product-score-v1.md  2026-03-22-response-to-review.md
evaluations/prd/: 2026-03-22-prd-score-v1.1.md  2026-03-22-prd-score-v1.2.md  2026-03-22-prd-score-v1.md
src/: analysis.rs  dedup.rs  explain.rs  filters.rs  main.rs  parser.rs  pipeline.rs  pricing.rs  scanner.rs  types.rs
src/output/: daily.rs  explain.rs  json.rs  mod.rs  session.rs  style.rs  table.rs
tests/: integration_test.rs
tests/fixtures/: simple_session.jsonl  streaming_session.jsonl  subagent_session.jsonl  synthetic_and_edge.jsonl
