[package]
name = "ccmetrics"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Honest token metrics for Claude Code — correct dedup, 5-type cache disaggregation, accurate costs"
license = "MIT"
repository = "https://github.com/ishpreet95/ccmetrics"
homepage = "https://github.com/ishpreet95/ccmetrics"
readme = "README.md"
keywords = ["claude", "anthropic", "tokens", "metrics", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["docs/", "evaluations/", "memory/", ".claude/", ".github/", ".DS_Store"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
glob = "0.3"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.release]
lto = true
strip = true

[dev-dependencies]
tempfile = "3.27.0"
